added pdf generation

--- a/src/app/card/card-form/trade-form.component.html
+++ b/src/app/card/card-form/trade-form.component.html
@@ -56,3 +56,13 @@
     </div>
   </p-footer>
 </p-panel>
+
+<br>
+
+<p-panel header="VIC Cards" [hidden]="!QRCodes.length">
+  <div id="contentToConvert">
+    <p-card *ngFor="let QRCode of QRCodes" [header]="vCard.name.firstNames + ' ' + vCard.name.lastNames">
+      <img [src]="QRCode">
+    </p-card>
+  </div>
+</p-panel>
