--- a/src/app/card/card-form/trade-form.component.css
+++ b/src/app/card/card-form/trade-form.component.css
@@ -1,3 +1,11 @@
 .ui-panel-footer {
   text-align: center;
 }
+
+.ui-card-body {
+  padding: 0 0 0.5em 0;
+}
+
+.ui-card {
+  border: 1px solid #ccc;
+}
