added routing, added not found page, added sign page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div style="max-width: 768px; margin: 50px auto;">
-  <img src="assets/logo.svg" style="margin: 0 auto 50px auto; width: 200px; display: block;">
-  <app-trade-form></app-trade-form>
+  <a class="btn btn-primary" routerLink="/"><img src="assets/logo.svg" style="margin: 0 auto 50px auto; width: 200px; display: block;"></a>
+  <router-outlet></router-outlet>
 </div>
