Fix email input type

--- a/src/app/card/card-form/trade-form.component.html
+++ b/src/app/card/card-form/trade-form.component.html
@@ -42,7 +42,7 @@
 
     <div class="ui-g-12 ui-md-12">
         <span class="ui-float-label">
-            <input [(ngModel)]="vCard.workEmail" required [disabled]="loading" id="emailAddress" pInputText size="30" type="tel">
+            <input [(ngModel)]="vCard.workEmail" required [disabled]="loading" id="emailAddress" pInputText size="30" type="email">
             <label for="emailAddress">E-Mail Address</label>
         </span>
     </div>
