--- a/src/app/card/card-form/trade-form.component.html
+++ b/src/app/card/card-form/trade-form.component.html
@@ -1,5 +1,6 @@
 <p-panel>
   <p-header>
+    <a class="btn btn-primary" routerLink="/revoke" style="float: right;">Revoke</a>
     Generate VIC Cards
   </p-header>
 
